Use command rather than control in the tabstrip on the Mac.

With Views, the control key is used for manipulating
selection in the tabstrip. Given the platform convention
on the Mac of using the command key for this, as well as
how on the Mac a control-click triggers a contextual menu
invocation, switch to a command key in those cases.

BUG=856698

Change-Id: Ic4d04f092503792da3b9bde8d6b6ed2800956697
Reviewed-on: https://chromium-review.googlesource.com/1195823
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587657}
Former-commit-id: 0361c898793cc63be2406c036bc64c3d0941be82